# google-chat-research-bot

./: .env.example  .gitignore  AGENTS.md  README.md  disable_weekly_schedule.txt  install_weekly_schedule.sh  main.py  manage_weekly_schedule.sh  requirements.txt  run_research.sh  target_source.json
source/document-automation-workspace/: .gitignore  (+6 more)
source/document-automation-workspace/backend/: .env.production.example  Dockerfile  pyproject.toml
source/document-automation-workspace/backend/alembic/: env.py
source/document-automation-workspace/backend/alembic/versions/: 0001_initial.py  0002_export_jobs_and_summary_indexes.py  0003_workspace_scope_columns.py
source/document-automation-workspace/backend/app/: __init__.py  audit.py  concurrency.py  config.py  database.py  document_modules.py  document_processor.py  extraction.py  main.py  models.py  module_validation.py  raw_extractor.py  schemas.py  storage.py  validation.py  vlm.py  vlm_params.py  workflow_graph.py  workflows.py  workspace.py
source/document-automation-workspace/backend/app/domain/: __init__.py  module_job.py  schema_definition.py  workflow_run.py
source/document-automation-workspace/backend/app/ports/: __init__.py  repositories.py
source/document-automation-workspace/backend/app/prompts/: __init__.py  classifier.py  common.py  kie.py  required_checker.py  schema_recommendation.py  structured_output.py
source/document-automation-workspace/backend/app/repositories/: __init__.py  sqlalchemy.py
source/document-automation-workspace/backend/tests/: conftest.py  test_api.py  test_migrations.py
(+34 files in other folders)
