[project]
name = "document-automation-workspace-backend"
version = "0.1.0"
description = "Document Automation Workspace FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0,<0.47.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "google-genai>=2.5.0",
    "python-dotenv>=1.0.0",
    "mammoth>=1.8.0",
    "openpyxl>=3.1.0",
    "python-pptx>=1.0.0",
    "pillow>=10.0.0",
    "bleach>=6.1.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
